# cpp-experiments

./: CMakeLists.txt  CMakePresets.json  cpx.hh  cpx.json  main.cpp  manifest-list-1.json  manifest-list.hh  manifest-list.json  test.avro  vcpkg-configuration.json  vcpkg.json
